<resources>
    <string name="app_name">android-blood-pressure-log</string>
    <string name="new_measurement">New measurement</string>
    <string name="all_measurements">All measurements</string>
    <string name="edit_measurement">Edit measurement</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="pulse">Pulse</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="note">Note</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="measurements">Measurements</string>
    <string name="import_export">Import/Export</string>
    <string name="filters">Filters</string>
    <string name="alerts">Alerts</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="apply">Apply</string>
    <string name="sys">SYS</string>
    <string name="dia">DIA</string>
    <string name="avg">AVG.</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="update">Update</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="automatic">Automatic</string>

    <string name="import_excel">Import as spreadsheet</string>
    <string name="import_pdf">Import as pdf</string>
    <string name="export_excel">Export as excel</string>
    <string name="date_from">Date from</string>
    <string name="date_to">Date to</string>
    <string name="time_range">Time range</string>
    <string name="type_here">Type here…</string>
    <string name="measurement_saved">Measurement Saved</string>
    <string name="fill_all_data">Fill All Data</string>
    <string name="no_description">No description</string>
    <string name="no_changes">No changes detected</string>
    <string name="save_entry_message">Do you want to save this entry?</string>
    <string name="save_measurment">Save measurement</string>
    <string name="delete_entry_message">Do you want to delete this entry?</string>
    <string name="delete_measurment">Delete measurement</string>
    <string name="accept_storage">Accept storage permissions</string>
    <string name="select_day_message">Select at least one day</string>
    <string name="night_mode">Night mode</string>
</resources>