<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/date_range_pickers_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateFromTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/date_from">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_from_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateToTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/date_to">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_to_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/time_range_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/time_range" />

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/time_from"
                android:text="6:00"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/time_to"
                android:text="20:00"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/time_range_slider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:valueFrom="1"
        android:valueTo="24"
        android:stepSize="1"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_filters_button"
        android:text="@string/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear_filters_button"
        android:text="@string/clear"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>