<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/note_layout"
        android:orientation="vertical"
        android:background="?colorSecondary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/composeNoteTextField"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:hint="@string/type_here">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/composeNoteTextInputEditText"
                android:gravity="top"
                android:background="?colorSecondaryVariant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelNoteMaterialButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveNoteMaterialButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>