<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ShareDialogFragment">

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/export_excel_layout"
            android:padding="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_margin="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/export_excel_icon"
                android:src="@drawable/ic_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/export_excel_label"
                android:textSize="15sp"
                android:text="@string/export_excel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/import_excel_layout"
            android:padding="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_margin="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/import_excel_icon"
                android:src="@drawable/ic_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/import_excel_label"
                android:textSize="15sp"
                android:text="@string/import_excel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/import_pdf_layout"
            android:padding="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_margin="10dp"
                android:paddingEnd="10dp"
                android:id="@+id/import_pdf_icon"
                android:src="@drawable/ic_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/import_pdf_label"
                android:textSize="15sp"
                android:text="@string/import_pdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>